fixing photo stretching

--- a/src/component/LandingPageV2/FP1/style.css
+++ b/src/component/LandingPageV2/FP1/style.css
@@ -274,8 +274,8 @@ h1 {
         height: 100%;
         max-height: 60vh;
         width: 80vw;
-        margin-left: 0;
-        margin-right: 0;
+        padding-top: 5vh;
+        margin: 0;
     }
     .product-img-container {
         display: flex;
